--- a/appbase/src/main/res/layout/recycler_item_neterror.xml
+++ b/appbase/src/main/res/layout/recycler_item_neterror.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/net_error_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:gravity="center">
+
+    <ImageView
+        android:id="@+id/nothing_img"
+        android:layout_width="@dimen/space_60"
+        android:layout_height="@dimen/space_60"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="@dimen/space_10"
+        android:src="@mipmap/base_net_error" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/text_tv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/grayWhite"
-        android:text="网络错误"/>
+        android:layout_below="@+id/nothing_img"
+        android:gravity="center"
+        android:text="网络环境较差\n点击重新加载"
+        android:textColor="@color/grayWhite" />
+
 </RelativeLayout>
