--- a/appbase/src/main/res/layout/toolbar_center_tv.xml
+++ b/appbase/src/main/res/layout/toolbar_center_tv.xml
@@ -84,6 +84,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <net.liang.appbaselibrary.widget.ShadowViewTop
+            android:id="@+id/toolbar_shadow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
