--- a/app/src/main/res/layout/activity_test__base_recycler_view_fragment.xml
+++ b/app/src/main/res/layout/activity_test__base_recycler_view_fragment.xml
@@ -2,12 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar_center"/>
+
         <FrameLayout
             android:id="@+id/frame_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
