--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -38,6 +38,33 @@
             android:text="Dagger列表使用示例"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/ic_launcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:paddingLeft="@dimen/space_16"
+                android:paddingRight="@dimen/space_16"
+                android:src="@mipmap/ic_launcher"
+                android:transitionName="ic_launcher" />
+            <ImageView
+                android:id="@+id/test_anim_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:transitionName="toolbar_back"
+                android:src="@mipmap/toolbar_back"/>
+            <Button
+                android:id="@+id/test_anim"
+                android:text="共享元素跳转"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
 </layout>
