--- a/appbase/src/main/res/layout/toolbar_center.xml
+++ b/appbase/src/main/res/layout/toolbar_center.xml
@@ -41,6 +41,7 @@
                     android:paddingLeft="@dimen/space_16"
                     android:paddingRight="@dimen/space_16"
                     android:src="@mipmap/toolbar_back"
+                    android:transitionName="toolbar_back"
                     android:tag="skin:toolbar_back:src"
                     android:visibility="gone" />
 
