--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,14 @@
     <style name="AppTheme" parent="BaseAppTheme">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
+        <!--text style-->
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColorLink">#0b9a27</item>
+        <item name="android:editTextColor">#666666</item>
+        <item name="android:textColorHint">#999999</item>
+
+        <item name="android:windowBackground">@color/windows_bg</item>
     </style>
 
 </resources>
