--- a/appbase/src/main/res/layout/layout_shadow_bottom.xml
+++ b/appbase/src/main/res/layout/layout_shadow_bottom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <view
+    <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/space_3"
+        android:layout_height="@dimen/space_1"
         android:background="@drawable/shape_shadow_bottom">
-    </view>
+    </View>
 
 </merge>
